--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <script async src="https://static.coinstats.app/widgets/coin-calculator-widget.js"></script>
-<coin-stats-calculator-widget type="invest" locale="en" currency="INR" is-editable="true" text-color="#FFFFFF" selection-color="#FFA959" background="#1C1B1B" font="Roboto, Arial, Helvetica" border-color="rgba(255,255,255,0.15)"></coin-stats-calculator-widget>
-</body>
+<coin-stats-calculator-widget type="invest" locale="en" currency="INR" is-editable="true" text-color="#1C1B1B" selection-color="#F49132" background="#FFFFFF" font="Roboto, Arial, Helvetica" border-color="rgba(28,27,27,0.15)"></coin-stats-calculator-widget>
+    </body>
 </html>
