--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nooobument</title>
+    <title>harshini</title>
 </head>
 <body>
     <script async src="https://static.coinstats.app/widgets/coin-calculator-widget.js"></script>
